se finalizo con el crud completo de la biblioteca, falta verificar que no se muestran las listas de autores/libros